# simit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README  README.md
apps/fem/: CMakeLists.txt  README.md  fem.cpp  fem_linear.sim  fem_neohookean.sim  poisson2.sim  poisson_3D_tetrahedrons.sim  static_scalar_2D.cpp  static_scalar_3D.cpp
apps/lulesh/: CMakeLists.txt  README.md  launcher.sh  lulesh-init.cc  lulesh-serial.cc  lulesh-simit.cc  lulesh-util.cc  lulesh.cc  lulesh.cpp  lulesh.h  lulesh.sim
apps/multigrid/: CMakeLists.txt  MGParameterManager.cpp  MGParameterManager.h  Parameter.cpp  Parameter.h  ParameterManager.cpp  ParameterManager.h  ParameterManagerMacros.h  README.md  Thermal-MG.cpp  Thermal.cpp  Thermal.h  ThermalParameterManager.cpp  ThermalParameterManager.h  ThermalViz.cpp  pan.therm  pansteak2x2.cgns  params.therm  steak.therm  thermal.sim
src/: CMakeLists.txt  Errors.cpp  Errors.h  Frontend.cpp  Frontend.h  IR.cpp  IR.h  Logger.cpp  Logger.h  Parser.cpp  Parser.ypp  Program.cpp  Program.h  Scanner.cpp  Scanner.flex  Scanner.h  Test.cpp  Test.h  Tokens.h  Types.cpp  Types.h  Util.cpp  Util.h  assign_checker.cpp  assign_checker.h  backend.cpp  backend.h  codegen.cpp  codegen.h  comparable.h  complex_types.h  const_fold.cpp  const_fold.h  dis.cpp  dis.h  domain.cpp  domain.h  environment.cpp  environment.h  error.cpp  (+188 more)
src/backend/: CMakeLists.txt  actual.h  backend.cpp  backend.h  backend_function.cpp  backend_function.h  backend_impl.h  backend_visitor.cpp  backend_visitor.h
src/backend/gpu/: CMakeLists.txt  fuse_kernels.cpp  fuse_kernels.h  gpu_backend.cpp  gpu_backend.h  gpu_codegen.cpp  gpu_codegen.h  gpu_function.cpp  gpu_function.h  gpu_ir.cpp  gpu_ir.h  gpu_var_cleaner.h  initmod.intrinsics.cpp  initmod.libdevice.compute_20.cpp  initmod.libdevice.compute_35.cpp  kernel_rw_analysis.cpp  kernel_rw_analysis.h  lift_gpu_vars.cpp  lift_gpu_vars.h  localize_temps.cpp  localize_temps.h  rewrite_compound_ops.cpp  rewrite_compound_ops.h  rewrite_memsets.cpp  rewrite_memsets.h  rewrite_system_assign.cpp  shard_gpu_loops.cpp  shard_gpu_loops.h  var_decl_rewriter.cpp  var_decl_rewriter.h
src/backend/llvm/: CMakeLists.txt  llvm_backend.cpp  llvm_backend.h  llvm_codegen.cpp  llvm_codegen.h  llvm_codegen_nortti.cpp  llvm_context.cpp  llvm_context.h  llvm_data_layouts.cpp  llvm_data_layouts.h  llvm_defines.h  llvm_function.cpp  llvm_function.h  llvm_types.cpp  llvm_types.h  llvm_util.cpp  llvm_util.h  llvm_versions.h
src/frontend/: CMakeLists.txt  assign_checker.h  clone_generic_functions.cpp  clone_generic_functions.h  const_checker.cpp  const_checker.h  const_fold.cpp  const_fold.h  context_sensitive_rewriter.cpp  context_sensitive_rewriter.h  fir.cpp  fir.h  fir_intrinsics.cpp  fir_intrinsics.h  fir_printer.cpp  fir_printer.h  fir_rewriter.cpp  fir_rewriter.h  fir_visitor.cpp  fir_visitor.h  frontend.cpp  func_call_rewriter.cpp  func_call_rewriter.h  hir.cpp  hir.h  hir_printer.cpp  hir_printer.h  hir_rewriter.cpp  hir_rewriter.h  hir_visitor.cpp  hir_visitor.h  infer_element_sets.cpp  infer_element_sets.h  infer_element_sources.cpp  infer_element_sources.h  ir_emitter.cpp  ir_emitter.h  pad_tensor_blocks.cpp  pad_tensor_blocks.h  parser.cpp  (+13 more)
src/gpu_backend/: fuse_kernels.cpp  gpu_backend.cpp  gpu_backend.h  gpu_codegen.cpp  gpu_codegen.h  gpu_function.cpp  gpu_function.h  gpu_ir.cpp  gpu_ir.h  initmod.intrinsics.cpp  initmod.libdevice.compute_30.cpp  intrinsics.cpp  intrinsics.h  kernel_rw_analysis.cpp  kernel_rw_analysis.h  libdevice.compute_20.cpp  libdevice.compute_30.cpp  libdevice.compute_35.cpp  lift_gpu_vars.cpp  rewrite_system_assign.cpp  rewrite_system_assign.h  shard_gpu_loops.cpp  shard_gpu_loops.h  var_decl_rewriter.cpp
src/graph-viz/: graph-viz.cpp  graph-viz.h
src/interfaces/: printable.h  uncopyable.h
src/lower/: CMakeLists.txt  lower.cpp  lower.h  lower_accesses.cpp  lower_accesses.h  lower_indexexpr_taco.cpp  lower_indexexpr_taco.h  lower_indexexprs.cpp  lower_indexexprs.h  lower_maps.cpp  lower_maps.h  lower_prints.cpp  lower_prints.h  lower_stencil_assemblies.h  lower_string_ops.cpp  lower_string_ops.h  lower_unroll.cpp  lower_unroll.h
src/lower/index_expressions/: loops.cpp  loops.h  (+12 more)
src/parser/: CMakeLists.txt  location.hh  parser.cpp  parser.h  parser.ypp  position.hh  scanner.cpp  scanner.flex  scanner.h  stack.hh
src/program_analysis/: cp.cpp  node_replacer.cpp  node_replacer.h  program_analysis.cpp  program_analysis.h
src/util/: arrays.h  collections.h  compare.cpp  compare.h  name_generator.cpp  name_generator.h  scopedmap.h  util.cpp  util.h
src/visualizer/: CMakeLists.txt  CMakeLists.txt~  visualizer.cpp  visualizer.h
test/: CMakeLists.txt  Program_test.cpp  apply-tests.cpp  apps-tests.cpp  assembly-tests.cpp  codegen-test.cpp  codegen-tests.cpp  compile_files_test.cpp  compile_strings_test.cpp  fem-test.cpp  ffi-tests.cpp  function-tests.cpp  graph-test.cpp  graph-tests.cpp  graph_indices-tests.cpp  index_expression-tests.cpp  index_expressions-tests.cpp  indices-tests.cpp  input-test.cpp  isprings-test.cpp  issue-tests.cpp  lower-test.cpp  mesh-test.cpp  mesh_loader-test.cpp  nn-test.cpp  path_expression_builder-tests.cpp  path_expressions-test.cpp  path_expressions-test.h  path_indices-test.cpp  path_indices-tests.cpp  path_indices-tests.h  program-cg-test.cpp  program-esprings-test.cpp  program-fem-test.cpp  program-isprings.cpp  program-nn-test.cpp  program-pagerank-test.cpp  program-test.cpp  reorder-tests.cpp  simit-test.cpp  (+14 more)
test/gtest/: gtest-all.cc
test/input/: blas0.sim  blas1.sim  blas2.sim  blas3.sim  controlflow.sim  empty_proc_def.sim  function.sim  function_headers.sim  global_declarations.sim  global_definitions.sim  index_notation.sim  intrinsics.sim  la_elements.sim  linear_algebra.sim  loops.sim  map.sim  misc.sim  objects.sim  rigid.sim  simple.sim  springs.sim  variables.sim  vars.sim
tools/: CMakeLists.txt  simit-check.cpp  simit-dump.cpp  simit-mode.el
tools/visualizer/: simit-viz-edges.cpp  simit-viz-faces.cpp  simit-viz-points.cpp  simit-viz.cpp
(+255 files in other folders)
