set(SIMIT_VISUALIZER_DIR "${SIMIT_TOOLS_DIR}/visualizer")

file(GLOB UTIL_SOURCES "${SIMIT_TOOLS_DIR}/*.cpp")
file(GLOB VIZ_SOURCES "${SIMIT_VISUALIZER_DIR}/*.cpp")
foreach(UTIL_SOURCE ${UTIL_SOURCES})
	get_filename_component(UTIL ${UTIL_SOURCE} NAME_WE)
	add_executable(${UTIL} ${UTIL_SOURCE})
	target_link_libraries(${UTIL} ${PROJECT_NAME})
endforeach()
foreach(VIZ_SOURCE ${VIZ_SOURCES})
        get_filename_component(VIZ ${VIZ_SOURCE} NAME_WE)
	add_executable(${VIZ} ${VIZ_SOURCE})
	target_link_libraries(${VIZ} ${PROJECT_NAME}viz)
endforeach()
